@@ -1,6 +1,7 @@
 package ar.com.sourcesistemas.services;
 
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
 
 public class Terminal {
@@ -15,25 +16,12 @@ public class Terminal {
 
     public int executeLinux(String filePath){
         String command = "gnome-terminal -- bash -c \"vim "+filePath+"\" ";
-
         try {
-            final String[] wrappedCommand;
-            wrappedCommand = new String[]{"osascript",
-                    "-e", "tell application \"Terminal\" to activate",
-                    "-e", "tell application \"Terminal\" to do script \"" + command + ";exit\""};
-            Process process = new ProcessBuilder(command)
-                    .redirectErrorStream(true)
-                    .start();
-            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-                String line;
-                while ((line = reader.readLine()) != null) {
-                    System.out.println(line); // Your superior logging approach here
-                }
-            }
-            process.wait();
-            return process.waitFor();
-        }catch(Exception e){
+            Process exec = Runtime.getRuntime().exec(new String[]{"gnome-terminal", "--", "bash", "-c", "vim " + filePath});
+        } catch (IOException e ) {
+            e.printStackTrace();
         }
+
         return -1;
 
     }
